# tox_practice

./: .gitignore  pyproject.toml  tox.ini
.github/workflows/: tox_practice.yml
hoge/: main.py
tests/: test_main.py
